# veyon

./: CMakeLists.txt  INSTALL  README.md  SECURITY.md  project.yml
android/: AndroidManifest.xml
cli/: veyon-cli.1
cmake/: CPackDefinitions.cmake
configurator/: veyon-configurator.1
configurator/data/: io.veyon.veyon-configurator.policy.in  veyon-configurator.desktop.in
core/src/: AboutDialog.ui  VeyonCore.cpp
master/: veyon-master.1
master/data/: veyon-master.desktop.in
nsis/: veyon.nsi.in
plugins/platform/linux/: LinuxCoreFunctions.cpp  LinuxCoreFunctions.h  LinuxInputDeviceFunctions.cpp  LinuxInputDeviceFunctions.h  LinuxKeyboardInput.cpp  LinuxKeyboardInput.h  LinuxServiceCore.cpp
plugins/vncserver/: CMakeLists.txt
plugins/vncserver/wayland-portal/: CMakeLists.txt  WaylandPortalVncConfiguration.h  WaylandPortalVncServer.cpp  WaylandPortalVncServer.h
server/: veyon-server.1
service/: veyon-service.1  veyon.service.in
worker/: veyon-worker.1
